--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,6 +33,12 @@ thead {background-color: silver; color:black}
 input, textarea, select {max-width:98%}
 .formButtons {margin:10px 0px 0px 0px}
 
+.paginator {padding:10px}
+.paginator a,
+.paginator var {border-style:solid; border-width:1px; border-color:black; text-align:center;
+  display:inline-block; width:30px; height:30px; padding:5px; margin:0px;}
+.paginator .actual {background-color:#d0d0e0}
+
 .pathItem {display:inlie-block; width:auto; margin:0px; padding:0px;}
 .pathItem .fas {margin-right: 0px }
 
@@ -82,6 +88,7 @@ input, textarea, select {max-width:98%}
 #messages .contra {background-color:#f28c8c}
 #messages .protest {color:red}
 #messages .replyTo {font-weight:bolder}
+#messages img {max-width: 40%}
 
 footer {background:silver; padding:10px; margin-top:20px}
 #cookieEnable {position:fixed; z-index:999; bottom:0px; left:0px; width:100%;
