--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,11 +33,13 @@ thead {background-color: silver; color:black}
 input, textarea, select {max-width:98%}
 .formButtons {margin:10px 0px 0px 0px}
 
-.paginator {padding:10px}
-.paginator a,
-.paginator var {border-style:solid; border-width:1px; border-color:black; text-align:center;
-  display:inline-block; width:30px; height:30px; padding:5px; margin:0px;}
-.paginator .actual {background-color:#d0d0e0}
+.paginator {display:block; padding:10px;}
+.paginator .paginatorItem {display:inline-block; height:36px; width:36px;
+	border-style:solid; border-width:1px; border-color:black; margin:0px}
+.paginator a { 
+  text-align:center; vertical-align: baseline;
+  display:inline-block; width:32px; height:32px; padding:5px; margin:0px;}
+.paginator a.actual {background-color:#d0d0e0}
 
 .pathItem {display:inlie-block; width:auto; margin:0px; padding:0px;}
 .pathItem .fas {margin-right: 0px }
@@ -90,6 +92,11 @@ input, textarea, select {max-width:98%}
 #messages .replyTo {font-weight:bolder}
 #messages img {max-width: 40%}
 
+#pollContainer .logo {display:inline-block; height:32px; width:auto}
+#pollContainer #pollMenu {background-color:black; color:white; line-height:220%}
+#pollContainer #pollMenu a {color:white}
+#pollContainer .liked {color:green}
+
 footer {background:silver; padding:10px; margin-top:20px}
 #cookieEnable {position:fixed; z-index:999; bottom:0px; left:0px; width:100%;
 	background-color:silver; opacity:0.9; padding:20px; text-align:right;
@@ -107,11 +114,13 @@ footer {background:silver; padding:10px; margin-top:20px}
 	a {color: blue}
 	#teamMenu span {display:none}
 	.subMenuIcon {display:block; text-align:right}
+	#pollMenu span {display:none}
 }
 @media (max-width:991px) {
 	.submenuIcon {display:inline-block}
 	.submenu {display:none}
 	a {color: blue}
 	#teamMenu span {display:none}
+	#pollMenu span {display:none}
 	.subMenuIcon {display:block; text-align:right}
 }
