--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,10 +56,13 @@ nav.flex span > span > span.cursor-default {background-color:#d0d0e0}
 
 /* welcome */
 .welcome .descriptionBtn {font-size:22pt}
-.welcome .leiras {margin:2%; width:90%}
 .welcome .leiras div {margin-top:1%}
 .welcome .tartalom {margin:5%; clear:both; padding:2%}
 .welcome .tartalom li {margin-left:2%; list-style:disc}
+
+#leiras {text-align:center}
+#leiras .leirasBody {display:inline-block; width: 70%; text-align:left}
+#leiras i {display:block; margin-left:10%; color:#508050}
 
 /* groups */ 
 .parentPath {border-style:solid; border-width:1px; padding:2px; margin:2px; background-color:#f0f0f0}
