--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,6 +114,11 @@ nav.flex span > span > span.cursor-default {background-color:#d0d0e0}
 	border-style:solid; border-width:1px; border-color:black;}
 .elfogadhato {display:none}	
 
+#projectContainer .logo {display:inline-block; height:32px; width:auto}
+#projectContainer #projectMenu {background-color:black; color:white; line-height:220%}
+#projectContainer #projectMenu a {color:white}
+
+
 footer {background:silver; padding:10px; margin-top:20px}
 #cookieEnable {position:fixed; z-index:999; bottom:0px; left:0px; width:100%;
 	background-color:silver; opacity:0.9; padding:20px; text-align:right;
@@ -132,6 +137,7 @@ footer {background:silver; padding:10px; margin-top:20px}
 	#teamMenu span {display:none}
 	.subMenuIcon {display:block; text-align:right}
 	#pollMenu span {display:none}
+	#projectMenu span {display:none}
 }
 @media (max-width:991px) {
 	.submenuIcon {display:inline-block}
@@ -139,5 +145,6 @@ footer {background:silver; padding:10px; margin-top:20px}
 	a {color: blue}
 	#teamMenu span {display:none}
 	#pollMenu span {display:none}
+	#projectMenu span {display:none}
 	.subMenuIcon {display:block; text-align:right}
 }
