--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,6 +21,7 @@ h5 {font-size:14pt; font-weight:bold; margin:10px 0px 10px 0px}
 .searchForm {margin:10px 0px 10px 0px}
 thead {background-color: silver; color:black}
 .btn {width:auto; margin:5px;}
+.btn-success {padding:12px 15px 5px 15px;}
 .fas {margin-right:10px}
 .fa-frown, .fa-flushed, .fa-grin {color:orange}
 .btn-disabled {background-color:silver; border-style:solid; border-width:1px; cursor:default}
@@ -132,8 +133,8 @@ nav.flex span > span > span.cursor-default {background-color:#d0d0e0}
    width:31%; height:400px;
 	border-style:solid; border-width:1px; border-color:silver;
 	padding:10px; margin:2px; text-align:center}
-#products .productsItem imgContainer {display:inline-block; margin:0px; 
-	width:80%; max-height: 200px; overflow:hidden} 	
+#products .productsItem .imgContainer {display:inline-block; margin:0px; 
+	width:80%; height:200px; max-height: 200px; overflow:hidden} 	
 #products .productsItem img {display:inline-block; margin:0px; 
 	width:80%; max-height: 200px; overflow:hidden} 	
 #products .productsItem input {width:23%}	
@@ -147,6 +148,18 @@ nav.flex span > span > span.cursor-default {background-color:#d0d0e0}
   margin:0px; padding:0px; line-height:18px; vertical-align:top}
 #products .productsItem .evaluation img {width:17px; height:17px;
   margin:0px; padding:0px; line-height:18px; vertical-align:top}
+#product .quantity {width:100px}
+#product #treeIkon {display:none}
+#product #treeValues {display:none}
+#product #tree {display:block}
+#product img {max-width:400px}
+
+.evaluation {color:green}
+.evaluation .fas {width:18px; height:18px; 
+  margin:0px; padding:0px; line-height:18px; vertical-align:top}
+.evaluation img {display:inline-block; width:17px; height:17px;
+  margin:0px; padding:0px; line-height:18px; vertical-align:top}
+
 
 footer {background:silver; padding:10px; margin-top:20px}
 #cookieEnable {position:fixed; z-index:999; bottom:0px; left:0px; width:100%;
@@ -182,11 +195,16 @@ table.indexTable td {display:block; border-style:none}
 	#pollMenu span {display:none}
 	#projectMenu span {display:none}
 	#projectMenu a em {display:inline-block; color:white;}
+	
 	#products #treeIkon {display:block}
 	#products #treeValues {display:block}
 	#products #tree {display:none}
 	#projectContainer .state {width:100%; min-height:auto; height:auto}
 	#products .productsItem {width:100%}	
+
+	#product #treeIkon {display:block}
+	#product #treeValues {display:block}
+	#product #tree {display:none}
 
 	/* no Table */
 	table.indexTable tr {display:inline-block; width:100%; height:auto; max-height:auto;
@@ -208,6 +226,10 @@ table.indexTable td {display:block; border-style:none}
 	#products #tree {display:none}
 	#projectContainer .state {width:100%; min-height:auto; height:auto; max-height:auto}
 	#products .productsItem {width:100%}	
+
+	#product #treeIkon {display:block}
+	#product #treeValues {display:block}
+	#product #tree {display:none}
 
 	/* no Table */
 	table.indexTable tr {display:inline-block; width:100%; height:auto; max-height:auto; 
