--- a/public/css/main.css
+++ b/public/css/main.css
@@ -125,13 +125,15 @@ nav.flex span > span > span.cursor-default {background-color:#d0d0e0}
 
 /* product */
 #products .productsItem {display:inline-block; 
-   width:31%; height:410px;
+   width:31%; max-width:31%; overflow:hidden;
+   height:440px; max-height:440px;
 	border-style:solid; border-width:1px; border-color:silver;
 	padding:10px; margin:2px; text-align:center}
 #products .productsItem .imgContainer {display:inline-block; margin:0px; 
-	width:80%; height:200px; max-height: 200px; overflow:hidden} 	
+	width:80%; height:160px; max-height: 160px; overflow:hidden} 	
 #products .productsItem img {display:inline-block; margin:0px; 
-	width:80%; max-height: 200px; overflow:hidden} 	
+	width:80%; max-height: 160px; overflow:hidden} 	
+#products h3 {font-size:14pt} 	
 #products .productsItem input {width:23%}	
 #products #treeIkon {display:none}
 #products #treeValues {display:none}
