--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,9 @@ main {padding-top:50px; padding-left:10px;}
 .min-h-screen {min-height:10px; height:auto;}
 .loggedAvatar1 {display:none}
 .help {background-color:#cdf7d9; color:black; padding:10px; margin:5px; border-radius:10px}
+.helpBtn {width:auto; position:fixed; z-index:2; top:90px; right:5px; opacity:0.7;
+   background-color: #cdf7d9; color:black; padding:10px; 
+   border-style:solid; border-width:1px; border-color:black;  border-radius:10px}
 .logLink {color:#808080; cursor:pointer}
 .log {background-color:#d0d0d0; color:#808080}
 .pageContainer {padding:0px 10px 10px 10px; min-height:500px}
@@ -41,6 +44,7 @@ thead {background-color: silver; color:black}
 .submenu li {border-style:solid; border-width:0px 0px 1px 0px; padding:2px}
 input, textarea, select {max-width:98%}
 .formButtons {margin:10px 0px 0px 0px}
+.liked {color:green}
 
 .paginator {display:block; padding:10px; float:right}
 .paginator .paginatorItem {display:inline-block; height:36px; width:36px;
