--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,7 +16,7 @@ main {padding-top:50px; padding-left:10px;}
 .helpBtn {width:auto; position:fixed; z-index:2; top:90px; right:5px; opacity:0.7;
    background-color: #cdf7d9; color:black; padding:10px; 
    border-style:solid; border-width:1px; border-color:black;  border-radius:10px}
-.help img {display:inline-block; width:95%; max-width:500px;}
+.help img {display:inline-block; width:95%;}
 .help ul {margin-left:30px; list-style:disc}
 .help .remark {margin-left:30px; color:#3f913b}
 
